# idk_engine

./: CMakeLists.txt  README.md
assets/: EntityService.cfg  GameClientService.cfg  GameServerService.cfg  LocalGameService.cfg  NetService.cfg  PlatformService.cfg  RemoteGameService.cfg  UdpService.cfg  WorldService.cfg
data/: IoService.cfg
h/idk/: UdpClientService.hpp  UdpServerService.hpp  UdpService.hpp  engine.hpp  io_api.hpp  io_service.hpp
h/idk/config/udp/: ClientInputAddress.hpp  HeartbeatAddress.hpp  SnapshotAddress.hpp  UdpAddress.hpp  UdpPortNumber.hpp
h/idk/engine/: LocalGameClient.hpp  LocalGameServer.hpp  RemoteGameClient.hpp  RemoteGameServer.hpp  UdpRxer.hpp  UdpRxerBase.hpp  UdpTxer.hpp  controller.hpp  engine.hpp  io_interface.hpp  world.hpp
h/idk_engine/: Engine.hpp  EngineMsg.hpp  EntityManager.hpp  EntityService.hpp  GameClient.hpp  GameClientService.hpp  GameServer.hpp  GameServerService.hpp  InputState.hpp  IoService.hpp  LocalGameClient.hpp  LocalGameServer.hpp  LocalGameService.hpp  NetProtocol.hpp  NetService.hpp  PlatformService.hpp  RemoteGameClient.hpp  RemoteGameServer.hpp  RemoteGameService.hpp  UdpRxTxer.hpp  UdpRxer.hpp  UdpRxerBase.hpp  UdpTxer.hpp  WorldService.hpp
h/idk_engine/config/: Network.hpp
h/idk_engine/config/network/: ClientHealthAddress.hpp  TimeSyncAddress.hpp
h/idk_engine/config/udp/: UdpAddress.hpp  UdpPortNumber.hpp
src/: AppRuntime.cpp  Engine.cpp  EntityManager.cpp  EntityService.cpp  GameClient.cpp  GameClientService.cpp  GameServer.cpp  GameServerService.cpp  GameWorld.cpp  IoService.cpp  LocalGameClient.cpp  LocalGameServer.cpp  LocalGameService.cpp  NetService.cpp  OsAdapter.cpp  PlatformService.cpp  RemoteGameClient.cpp  RemoteGameServer.cpp  RemoteGameService.cpp  UdpClientService.cpp  UdpRxTxer.cpp  UdpRxer.cpp  UdpServerService.cpp  UdpService.cpp  UdpTxer.cpp  World.cpp  WorldService.cpp  adapter.cpp  controller.cpp  engine.cpp  io_api.cpp  io_service.cpp  main.cpp  platform.cpp  world.cpp  zzz.cpp
src/engine/: LocalGameClient.cpp  LocalGameServer.cpp  RemoteGameClient.cpp  RemoteGameServer.cpp  UdpRxer.cpp  UdpTxer.cpp  world.cpp
src/idk_config/: Memory.hpp
src/idk_engine/: Allocator.hpp  EventBus.hpp  GameClient.hpp  GameServer.hpp  GameWorld.hpp  NetProtocol.hpp  New.hpp  UdpRxTxer.hpp
